--- a/css/commons.css
+++ b/css/commons.css
@@ -1,4 +1,4 @@
-hr.cc_star-line {
+/* hr.cc_star-line {
     width: 4.6875rem;
     height: .1875rem;
     color: inherit;
@@ -7,4 +7,4 @@ hr.cc_star-line {
 
 .cc_star-ico {
     color: inherit;
-}
+} */
