--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@
     background-color: red;
 } */
 
-.debug #portfolio > .row > div > span {
+/* .debug #portfolio > .row > div > span {
     display: block;
-    /* max-width: 490px; */
+    max-width: 490px;
     height: 357px;
     background-color: coral;
-}
+} */
 /**** /DEBUG ****/
 
 
@@ -66,6 +66,7 @@ nav .navbar-nav {
 }
 
 
+
 /***
 *  Main
 ***/
@@ -93,27 +94,60 @@ main {
 }
 
 
-
 /*** About ***/
 #about {
     background-color: var(--primary-color);
 }
+
 
 /*** Contact ***/
 #contact {
     color: var(--secondary-color);
 }
 
+#contact .btn {
+    background-color: var(--primary-color);
+    border: none;
+}
+
+
+
 /***
 *  Footer
 ***/
 footer{
     background-color: var(--secondary-color);
+    color: #fff;
 }
 
 #location {
     background-color: #3A546D;
 }
+
+/*** Link about freelancer ***/
+footer a {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+/*** Link social ***/
+footer .social-icon i {
+    width: 55px;
+    height: 55px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin: 0 12px;
+    font-size: 20px;
+}
+
+footer .social-icon i::before {
+    line-height: 50px;
+}
+
+footer .social-icon a {
+    color: #fff;
+}
+/*** /Link social ***/
 
 #copyright {
     height: 6.875rem;
